--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
     }
   ],
   "main": "./app",
+  "assembly": {
+    "namespace": "ds",
+    "components": [
+      "directory",
+      "directory/ldap"
+    ]
+  },
   "dependencies": {
     "fluidfactory": "0.0.0",
     "ldapjs": "^1.0.1"
